--- a/src/components/faculty-staff-card/faculty-staff-card.twig
+++ b/src/components/faculty-staff-card/faculty-staff-card.twig
@@ -9,5 +9,25 @@
       <a href="{{ url }}" class="iastate22-link-secondary">{{ title }}  <span class="arrow"></span></a>
     </p>
     <p class="faculty-staff-card__content-body">{{ body }}</p>
+    <ul class="faculty-staff-card__content-contact">
+      {% if email %}
+      <li>
+        <div class="faculty-staff-card__content-icon"><a href="mailto:{{ email }}"><i class="fak fa-iastate22-email"></i></a></div>
+        <div class="faculty-staff-card__contact-field"><a href="mailto:{{ email }}">{{ email }}</a></div>
+      </li>
+      {% endif %}
+      {% if phone %}
+      <li>
+        <div class="faculty-staff-card__content-icon"><i class="fak fa-iastate22-phone"></i></div>
+        <div class="faculty-staff-card__contact-field">{{ phone }}</div>
+      </li>
+      {% endif %}
+      {% for fact in facts %}
+      <li>
+        <div class="faculty-staff-card__content-key"><strong>{{ fact.key }}:</strong></div>
+        <div class="faculty-staff-card__contact-value">{{ fact.value|raw }}</div>
+      </li>
+      {% endfor %}
+    </ul>
   </div>
 </div>
