--- a/src/components/grid-list/grid-list.twig
+++ b/src/components/grid-list/grid-list.twig
@@ -1,20 +1,33 @@
 <div class="grid-list">
-  {% if label %}<h2 class="grid-list__label">{{ label }}</h2>{% endif %}
-  {% if sublabel %}<h3 class="grid-list__sublabel">{{ sublabel }}</h3>{% endif %}
+  {% if label %}
+    <h2 class="grid-list__label">{{ label }}</h2>
+  {% endif %}
+  {% if sublabel %}
+    <h3 class="grid-list__sublabel">{{ sublabel }}</h3>
+  {% endif %}
   <ul>
-    {% for link in grid_list %}
+    {% for list_item in grid_list %}
       <li>
-        <a href="#" class="grid-list__link">
-          {% if link.image %}
-          <div class="grid-list__image">
-            <img src="{{ link.image|path }}" alt="" loading="lazy" width="130" height="130">
+        {% if list_item.url %}
+          <a href="{{ list_item.url }}" class="grid-list__item">
+          {% else %}
+            <div class="grid-list__item">
+            {% endif %}
+            {% if list_item.image %}
+              <div class="grid-list__image">
+                <img src="{{ list_item.image|path }}" alt="" loading="lazy" width="130" height="130">
+              </div>
+            {% endif %}
+            {% if list_item.text %}
+              <span class="grid-list__text{% if not list_item.image %} grid-list--no-text{% endif %}">{{ list_item.text }}
+              </span>
+            {% endif %}
+            {% if list_item.url %}
+            </a>
+        {% else %}
           </div>
-          {% endif %}
-          {% if link.text %}
-          <span class="grid-list__text{% if not link.image %} grid-list--no-text{% endif %}" href="{{ link.url }}">{{ link.text }}<span class="arrow"></span>
-          </span>
-          {% endif %}
-        </a>
+        {% endif %}
+
       </li>
     {% endfor %}
   </ul>
