--- a/src/components/pages/event-components.twig
+++ b/src/components/pages/event-components.twig
@@ -7,7 +7,7 @@
 {% block content %}
   <div class="outer-pad">
     <p class="iastate-article__back-btn"><a href="#" class="link-set__link link-tertiary">View All Events</a></p>
-    {% include "@stater-article-hero--event-components" with hero %}
+    {% include "@hero--no-subnav" with hero %}
     <div class="paragraph-widget paragraph-widget--card-set">
       {% include "@card-set--title" with card_set_three_links %}
     </div>
