--- a/src/components/pages/event-detail.twig
+++ b/src/components/pages/event-detail.twig
@@ -7,7 +7,7 @@
 {% block content %}
   <div class="outer-pad">
     <p class="iastate-article__back-btn"><a href="#">View All Events</a></p>
-    {% include "@stater-article-hero--event" with hero %}
+    {% include "@hero--event-details" with hero %}
     <div class="paragraph-widget paragraph-widget--event-details">
       <div class="event-details">
         <dl class="event-details__wrap">
