--- a/src/components/pages/news-hub--no-hero.twig
+++ b/src/components/pages/news-hub--no-hero.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
   <div class="outer-pad news-hub">
-    {% include "@hero" with hero %}
+    {% include "@hero--no-subnav" with hero %}
 
     {% include "@featured-news" with featured_news %}
 
