Updating Faculty Cards to allow for optional link - updating data structure in json file

--- a/src/components/faculty-staff-card-set/faculty-staff-card-set.twig
+++ b/src/components/faculty-staff-card-set/faculty-staff-card-set.twig
@@ -1,7 +1,7 @@
 <div class="faculty-staff-card-set">
-    {% for item in faculty_staff_category1 %}
-      <div>
-        {% include "@faculty-staff-card" with item %}
-      </div>
-    {% endfor %}
+  {% for card in cards %}
+    <div>
+      {% include "@faculty-staff-card" with card %}
+    </div>
+  {% endfor %}
 </div>
