--- a/src/components/pages/faculty-staff-faculty-cards.twig
+++ b/src/components/pages/faculty-staff-faculty-cards.twig
@@ -5,64 +5,65 @@
 {% endblock %}
 
 {% block content %}
-<div class="outer-pad">
-  <div class="faculty-staff-directory-header">
-  {% include "@ecosystem-home-hero--no-image" %}
-  
-    <div class="paragraph-widget paragraph-widget--filter-form">
-      <div class="filter-form">
-        <form class="iastate22-form iastate22-form--inline" id="InlineForm" action="#" method="post">
-          <div class="form-item">
-            <label for="name">Search</label>
-            <input class="iastate22-form--search" type="text" name="name" id="name" value="" tabindex="1">
-          </div>
-          <div class="form-item">
-            <label for="select-choice">Category 1</label>
-            <select class="iastate22-form--select"  name="select-choice" id="select-choice">
-              <option value="Choice 1">Choice 1</option>
-              <option value="Choice 2">Choice 2</option>
-              <option value="Choice 3">Choice 3</option>
-            </select>
-          </div>
-          <div class="form-item">
-            <label for="select-choice">Category 2</label>
-            <select class="iastate22-form--select"  name="select-choice" id="select-choice">
-              <option value="Choice 1">Choice 1</option>
-              <option value="Choice 2">Choice 2</option>
-              <option value="Choice 3">Choice 3</option>
-            </select>
-          </div>
-          <div class="form-item">
-            <button type="submit">Search<span class="arrow"></span>
-            </button>
-          </div>
-        </form>
-        <p class="filter-form-results">About 344 Results &bull; <a href="#">Reset</a></p>
+  <div class="outer-pad">
+    <div class="faculty-staff-directory-header">
+      {% include "@ecosystem-home-hero--no-image" %}
+
+      <div class="paragraph-widget paragraph-widget--filter-form">
+        <div class="filter-form">
+          <form class="iastate22-form iastate22-form--inline" id="InlineForm" action="#" method="post">
+            <div class="form-item">
+              <label for="name">Search</label>
+              <input class="iastate22-form--search" type="text" name="name" id="name" value="" tabindex="1">
+            </div>
+            <div class="form-item">
+              <label for="select-choice">Category 1</label>
+              <select class="iastate22-form--select" name="select-choice" id="select-choice">
+                <option value="Choice 1">Choice 1</option>
+                <option value="Choice 2">Choice 2</option>
+                <option value="Choice 3">Choice 3</option>
+              </select>
+            </div>
+            <div class="form-item">
+              <label for="select-choice">Category 2</label>
+              <select class="iastate22-form--select" name="select-choice" id="select-choice">
+                <option value="Choice 1">Choice 1</option>
+                <option value="Choice 2">Choice 2</option>
+                <option value="Choice 3">Choice 3</option>
+              </select>
+            </div>
+            <div class="form-item">
+              <button type="submit">Search<span class="arrow"></span>
+              </button>
+            </div>
+          </form>
+          <p class="filter-form-results">About 344 Results &bull;
+            <a href="#">Reset</a>
+          </p>
+        </div>
       </div>
     </div>
-  </div>
+    <div class="paragraph-widget paragraph-widget--faculty-staff-card-set">
+      {% include "@faculty-staff-card-set" with faculty_staff_card_set_one %}
+    </div>
 
-  <div class="paragraph-widget paragraph-widget--faculty-staff-card-set">
-    {% include "@faculty-staff-card-set" with faculty_staff_items %}
-  </div>
+    <div class="text-content">
+      <h2>Category</h2>
+    </div>
 
-  <div class="text-content">
-    <h2>Category</h2>
-  </div>
+    <div class="paragraph-widget paragraph-widget--faculty-staff-card-set">
+      {% include "@faculty-staff-card-set" with faculty_staff_card_set_two %}
+    </div>
 
-  <div class="paragraph-widget paragraph-widget--faculty-staff-card-set">
-    {% include "@faculty-staff-card-set" with faculty_staff_items2 %}
-  </div>
+    <div class="text-content">
+      <h2>Category 2</h2>
+    </div>
 
-  <div class="text-content">
-    <h2>Category 2</h2>
-  </div>
+    <div class="paragraph-widget paragraph-widget--faculty-staff-card-set">
+      {% include "@faculty-staff-card-set" with faculty_staff_card_set_three %}
+    </div>
 
-  <div class="paragraph-widget paragraph-widget--faculty-staff-card-set">
-    {% include "@faculty-staff-card-set" with faculty_staff_items3 %}
   </div>
-  
-</div>
 {% endblock %}
 
 {% block footer %}
