--- a/src/components/faculty-staff-card/_faculty-staff-card.scss
+++ b/src/components/faculty-staff-card/_faculty-staff-card.scss
@@ -6,72 +6,75 @@
     gap: rem(20);
     max-width: rem(488);
   }
-  .faculty-staff-card__media {
-    margin-bottom: rem(15);
-    .faculty-staff-card__media-container {
-      @extend %responsive-img;
-      position: relative;
-      width: rem(200);
-      img.faculty-staff-card__media-image {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        object-position: center;
-        position: absolute;
-        display: block;
-        top: 0;
-        left: 0;
-      }
-      &:before {
-        padding-top: 100%;
-      }
+}
+.faculty-staff-card__media {
+  margin-bottom: rem(15);
+}
+
+.faculty-staff-card__media-container {
+  @extend %responsive-img;
+  position: relative;
+  width: rem(200);
+  &:before {
+    padding-top: 100%;
+  }
+}
+
+.faculty-staff-card__content-title {
+  font-size: rem(21);
+  color: $iastate-maroon;
+  font-family: $typeface-sans-serif;
+  font-weight: 700;
+  line-height: (29 / 21);
+  color: $iastate-maroon;
+  .iastate22-link-secondary {
+    font-size: rem(21);
+    .arrow {
+      bottom: rem(13);
     }
   }
-  .faculty-staff-card__content {
-    .faculty-staff-card__content-title {
-      .iastate22-link-secondary {
-        font-size: rem(21);
-      }
-      margin: 0;
-      a {
-        margin: 0;
-      }
+  margin: 0;
+  a {
+    margin: 0;
+  }
+}
+.faculty-staff-card__content-body {
+  color: $grey;
+  font-size: rem(16);
+  margin: 0 0 rem(15);
+}
+.faculty-staff-card__content-contact {
+  padding-left: 0;
+  li {
+    color: $iastate-maroon;
+    margin: 0 0 rem(10);
+    font-weight: 700;
+    display: flex;
+    .fa-iastate22-email,
+    .fa-iastate22-phone {
+      color: $iastate-maroon;
+      font-size: rem(30);
     }
-    .faculty-staff-card__content-body {
-      color: $grey;
-      font-size: rem(16);
-      margin: 0 0 rem(15);
+    a {
+      color: $iastate-maroon;
     }
-    .faculty-staff-card__content-contact {
-      padding-left: 0;
-      li {
-        color: $iastate-maroon;
-        margin: 0 0 rem(10);
-        font-weight: 700;
-        display: flex;
-        .fa-iastate22-email,
-        .fa-iastate22-phone {
-          color: $iastate-maroon;
-          font-size: rem(30);
-        }
-        a {
-          color: $iastate-maroon;
-        }
-        .faculty-staff-card__content-key {
-          font-weight: 700;
-        }
-        .faculty-staff-card__contact-field {
-          padding-left: rem(20);
-        }
-        .faculty-staff-card__contact-value {
-          padding-left: rem(5);
-        }
-        &:before {
-          content: "";
-          padding: 0;
-          margin-top: rem(5);
-        }
-      }
+
+    &:before {
+      content: "";
+      padding: 0;
+      margin-top: rem(5);
     }
   }
+}
+
+.faculty-staff-card__content-key {
+  font-weight: 700;
+}
+
+.faculty-staff-card__contact-field {
+  padding-left: rem(20);
+}
+
+.faculty-staff-card__contact-value {
+  padding-left: rem(5);
 }
