--- a/src/components/pages/faculty-staff-directory-a-z-index.twig
+++ b/src/components/pages/faculty-staff-directory-a-z-index.twig
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="a-z-index-letter-list">
-      <ul>
+      {# <ul>
         {% for letter in letter_list %}
         <li>
           {% if letter.url %}
@@ -25,7 +25,37 @@
           {% endif %}
         </li>
         {% endfor %}
-      </ul>
+      </ul> #}
+      <div class="facetwp-facet facetwp-facet-faculty_a_z facetwp-type-alpha" data-name="faculty_a_z" data-type="alpha">
+        <span class="facetwp-alpha facetwp-link available" data-id="">Any</span>
+        <span class="facetwp-alpha facetwp-link" data-id="#">#</span>
+        <span class="facetwp-alpha facetwp-link" data-id="A">A</span>
+        <span class="facetwp-alpha facetwp-link" data-id="B">B</span>
+        <span class="facetwp-alpha facetwp-link" data-id="C">C</span>
+        <span class="facetwp-alpha facetwp-link available" data-id="D">D</span>
+        <span class="facetwp-alpha facetwp-link available" data-id="E">E</span>
+        <span class="facetwp-alpha facetwp-link" data-id="F">F</span>
+        <span class="facetwp-alpha facetwp-link" data-id="G">G</span>
+        <span class="facetwp-alpha facetwp-link" data-id="H">H</span>
+        <span class="facetwp-alpha facetwp-link" data-id="I">I</span>
+        <span class="facetwp-alpha facetwp-link available" data-id="J">J</span>
+        <span class="facetwp-alpha facetwp-link" data-id="K">K</span>
+        <span class="facetwp-alpha facetwp-link" data-id="L">L</span>
+        <span class="facetwp-alpha facetwp-link" data-id="M">M</span>
+        <span class="facetwp-alpha facetwp-link" data-id="N">N</span>
+        <span class="facetwp-alpha facetwp-link" data-id="O">O</span>
+        <span class="facetwp-alpha facetwp-link" data-id="P">P</span>
+        <span class="facetwp-alpha facetwp-link" data-id="Q">Q</span>
+        <span class="facetwp-alpha facetwp-link" data-id="R">R</span>
+        <span class="facetwp-alpha facetwp-link available" data-id="S">S</span>
+        <span class="facetwp-alpha facetwp-link" data-id="T">T</span>
+        <span class="facetwp-alpha facetwp-link" data-id="U">U</span>
+        <span class="facetwp-alpha facetwp-link" data-id="V">V</span>
+        <span class="facetwp-alpha facetwp-link" data-id="W">W</span>
+        <span class="facetwp-alpha facetwp-link" data-id="X">X</span>
+        <span class="facetwp-alpha facetwp-link" data-id="Y">Y</span>
+        <span class="facetwp-alpha facetwp-link" data-id="Z">Z</span>
+      </div>
     </div>
   </div>
 
