--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -2,6 +2,14 @@
   .form-item {
     margin-bottom: rem(30);
   }
+
+  .form-item .facetwp-icon {
+    display: none;
+  }
+
+  .form-item .facetwp-facet {
+    margin-bottom: 0;
+  }
   label,
   .label {
     display: block;
