https://trello.com/c/k4chn4j7 fix for the arrow next to text on cards--linked-image variant

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -118,9 +118,8 @@
     min-width: rem(249);
     text-align: left;
     .arrow {
-      transform: translateX(#{rem(13)});
-      right: initial;
-      top: 49%;
+      inset: auto;
+      transform: translate(#{rem(13)}, #{rem(13)});
       width: 0;
       background-color: $iastate-gold;
 
