--- a/src/components/pages/Main University Site/main-site-kitchen-sink.twig
+++ b/src/components/pages/Main University Site/main-site-kitchen-sink.twig
@@ -207,6 +207,14 @@
     </div>
     <div class="paragraph-widget paragraph-widget--text-html">
       <div class="text-content">
+        <h2>Grid List</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--grid-list">
+      {% include "@grid-list" with grid_list %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
         <h2>Tables</h2>
       </div>
     </div>
