News page CSS fixes. Migration of Back End Inline JS to Front End Build

--- a/src/components/featured-news/_featured-news.scss
+++ b/src/components/featured-news/_featured-news.scss
@@ -24,6 +24,7 @@
         border-bottom: none;
         padding-right: rem(50);
         border-right: solid rem(3) $light-grey;
+        flex: 1 0 auto;
       }
       .featured-news__large-article__container {
         position: relative;
