--- a/src/scss/components/_calendar.scss
+++ b/src/scss/components/_calendar.scss
@@ -487,6 +487,10 @@
   font-style: italic;
 }
 
+.event-listing__desc {
+  color: $iastate-maroon;
+}
+
 /*---===/ Month View \===---*/
 
 .fc-dayGridMonth-view {
