Cursor added to reset button. Debug code added to JS to test in the back end

--- a/src/components/pages/_faculty-staff-directory.scss
+++ b/src/components/pages/_faculty-staff-directory.scss
@@ -67,6 +67,7 @@
       text-decoration: underline;
       background-color: transparent;
       border: none;
+      cursor: pointer;
     }
   }
 
